--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Animal App</title>
-    <link rel="stylesheet" href="todomvc-common/base.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
     <section id="animalapp"></section>
