--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Animal App</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.css" />
+    <link rel="stylesheet" href="css/app.css" />
   </head>
-  <body>
-    <section id="animalapp"></section>
-    <footer id="info">
-      <p>Double-click to edit a todo</p>
-      <p>Created by Eiji Sakai</p>
-    </footer>
-    <script src="js/bundle.js"></script>
+  <body id="animalapp">
+    <script src="js/bundle.js">
+    </script>
+    <script src="https://code.jquery.com/jquery-2.1.4.js">
+    </script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js">
+    </script>
   </body>
 </html>
